resim sayfası eklendi

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   http: ^0.13.5
   shimmer: ^2.0.0
+  cached_network_image: ^3.2.3
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
