--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shimmer: ^2.0.0
   cached_network_image: ^3.2.3
   photo_view: ^0.14.0
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
