--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cached_network_image: ^3.2.3
   photo_view: ^0.14.0
   share_plus: ^6.3.0
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
