--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   photo_view: ^0.14.0
   share_plus: ^6.3.0
   youtube_player_flutter: ^8.1.2
+  easy_search_bar: ^2.4.2
 
 dev_dependencies:
   flutter_test:
