--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   share_plus: ^6.3.0
   youtube_player_flutter: ^8.1.2
   easy_search_bar: ^2.4.2
+  flutter_staggered_grid_view: ^0.6.2
+  masonry_grid: ^1.0.0
 
 dev_dependencies:
   flutter_test:
