--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,12 @@ dependencies:
   http: ^0.13.5
   shimmer: ^2.0.0
   cached_network_image: ^3.2.3
-  photo_view: ^0.14.0
-  share_plus: ^6.3.0
   youtube_player_flutter: ^8.1.2
   easy_search_bar: ^2.4.2
   flutter_staggered_grid_view: ^0.6.2
   masonry_grid: ^1.0.0
+  google_nav_bar: ^5.0.6
+  flutter_zoom_drawer: ^3.0.4+1
 
 dev_dependencies:
   flutter_test:
