--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Movie Go
+name: movie_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -48,10 +48,21 @@ dependencies:
   google_nav_bar: ^5.0.6
   flutter_zoom_drawer: ^3.0.4+1
   flutter_screenutil: ^5.7.0
+  flutter_native_splash: ^2.2.19
+  flutter_launcher_icons: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "assets/logo/png-logo-2-day.png"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo/light-lg2.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
