--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   flutter_native_splash: ^2.2.19
   flutter_launcher_icons: ^0.12.0
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +87,7 @@ flutter:
   assets:
     - assets/
     - assets/logo/
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
