--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_native_splash: ^2.2.19
   flutter_launcher_icons: ^0.12.0
   easy_localization: ^3.0.1
+  animated_notch_bottom_bar: ^0.0.6
+  bubble_bottom_bar: ^2.0.0
+ 
 
 dev_dependencies:
   flutter_test:
