--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   easy_localization: ^3.0.1
   bubble_bottom_bar: ^2.0.0
+  provider: ^6.0.5
+  chewie: ^1.4.0
+  video_player: ^2.6.1
  
 
 dev_dependencies:
@@ -65,7 +68,7 @@ flutter_native_splash:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo/light-lg2.jpg"
+  image_path: "assets/logo/logo-png.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
