--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   chewie: ^1.4.0
   video_player: ^2.6.1
   flutter_svg: ^2.0.4
+  shared_preferences: ^2.1.0
  
 
 dev_dependencies:
