--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,14 @@ dependencies:
   flutter_svg: ^2.0.4
   shared_preferences: ^2.1.0
   lottie: ^2.3.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.0
+  get_it: ^7.4.1
  
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
