--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.1.1
   flutter_rating_bar: ^4.0.1
-  http: ^0.13.5
+  http: ^0.13.6
   shimmer: ^2.0.0
   cached_network_image: ^3.2.3
   youtube_player_flutter: ^8.1.2
@@ -62,6 +62,9 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.0
   get_it: ^7.4.1
+  google_maps_flutter: ^2.2.6
+  url_launcher: ^6.1.11
+  geolocator: ^9.0.2
  
 
 dev_dependencies:
