--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   google_maps_flutter: ^2.2.6
   url_launcher: ^6.1.11
   geolocator: ^9.0.2
+  share_plus: ^6.3.4
  
 
 dev_dependencies:
