--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,6 @@ dependencies:
   flutter_native_splash: ^2.2.19
   flutter_launcher_icons: ^0.12.0
   easy_localization: ^3.0.1
-  bubble_bottom_bar: ^2.0.0
   provider: ^6.0.5
   chewie: ^1.4.0
   video_player: ^2.6.1
@@ -66,6 +65,10 @@ dependencies:
   url_launcher: ^6.1.11
   geolocator: ^9.0.2
   share_plus: ^6.3.4
+  bubble_bottom_bar:
+    git:
+      url: https://github.com/westdabestdb/bubble_bottom_bar
+      ref: master
  
 
 dev_dependencies:
