internet connection check, some fixes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   url_launcher: ^6.1.11
   geolocator: ^9.0.2
   share_plus: ^6.3.4
+  internet_connection_checker: ^1.0.0+1
  
 
 dev_dependencies:
